--- a/second.html
+++ b/second.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Second Web Page</title>
+    <title>Paths Test 2</title>
     <meta charset="utf-8">
 </head>
 <body>
-  Hello World!
+
+  <img src="animal/birds/raptors/eagles/golden_eagle.jpg" alt="A Golden Eagle">
   <ul>
     <li><a href="https://en.wikipedia.org">Wikipedia</a></li>
     <li><a href="second.html">Page Two</a></li>
