--- a/final_project/try_this.html
+++ b/final_project/try_this.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>College Foodie</title>
+  <title>Try This!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -86,46 +86,30 @@
 
 
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">Dining Hall Hacks</h3>
-  <img src="images/popsicles.jpg" class="img-responsive img-circle margin" style="display:inline" alt="header" width="350" height="350">
-  <h3>Follow these tips to make the most out of your dining hall experience!</h3>
-</div>
-
-
-<div class="container-fluid bg-2 text-center">
   <h3 class="margin">Try This!</h3>
-  <p>Quick and easy recipes for on-the-go college students!</p>
-  <a href="#" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-search"></span> Search
-  </a>
+<img src="images/popsicles.jpg" class="img-responsive img-circle margin" style="display:inline" alt="header" width="350" height="350">
+  <h3>Recipes and snacks to try that are perfect for dorm room living!</h3>
 </div>
 
-
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Foodie Court</h3><br>
-  <div class="row">
-    <div class="col-sm-4">
-      <p>Regular vs. Double Stuf Oreos</p>
-      <img src="images/oreos.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-4">
-      <p>Chunky vs. Creamy Peanut Butter</p>
-      <img src="images/pbb.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-4">
-      <p>Campion Chocolate Chip Cookies vs. Sugar Cookies</p>
-      <img src="images/cooks.jpg" class="img-responsive margin" style="width:110%" height= "500px" alt="Image">
-    </div>
+<div class="container-fluid">
+<div class="row">
+  <div class="col-md-4">
+    Breakfast Bars: The Good, the Bad, and the Ugly
+    <img src="images/nv.jpg" class="img-responsive img-circle margin" style="display:inline" alt="header" width="350" height="350">
   </div>
+  <div class="col-md-4">
+    Microwave Mac and Cheese: Which brand ranks supreme?
+  <img src="images/mc.jpg" class="img-responsive img-circle margin" style="display:inline" alt="header" width="350" height="350">
 </div>
-
-
+<div class="col-md-4">
+  Soup: Perfect dorm meal for every season
+<img src="images/soup.jpg" class="img-responsive img-circle margin" style="display:inline" alt="header" width="350" height="350">
+</div>
+<div class="container-fluid">
+<div class="row">
 <footer class="container-fluid bg-4 text-center">
-  <p> Follow Us!</p>
-  <img src="http://dluatwz823att.cloudfront.net/201511137ygo248_ag/dist/img/nav-facebook.png" alt="">
-  <img src="http://twitter.com/sjuhawknews" target="_blank"><img src="http://dluatwz823att.cloudfront.net/201511137ygo248_ag/dist/img/nav-twitter.png" alt=""></a></li>
-  <img src="http://instagram.com/sjuhawknews" target="_blank"><img src="http://dluatwz823att.cloudfront.net/201511137ygo248_ag/dist/img/nav-instagram.png" alt=""></a></li>
-</footer>
 
+</footer>
+</div>
 </body>
 </html>
